--- a/templates/chat.html
+++ b/templates/chat.html
@@ -12,56 +12,90 @@
     <meta property="og:image" content="{% static 'imran.png' %}">
     <style>
         body {
-            background-color: #e0ffeb;
+            background-color: #f8f9fa;
         }
-        h2 {
+
+        h1 {
             text-align: center;
-            color: #333;
+            color: #007bff;
         }
+
         .card {
-            height: 1000px;
+            height: 60dvh;
             overflow-y: scroll;
             scroll-behavior: smooth;
-            scroll-padding: 5px;
         }
+
         .card-body {
             height: 100%;
         }
+
         #chat-area {
-            height: 100%;
-            overflow-y: scroll;
-            flex-direction: column;
-            justify-content: flex-end;
+            display: flex;
+            flex-direction: column-reverse; /* Display latest message at the bottom */
+            overflow-y: auto;
         }
+
         #chat-form {
             margin-bottom: 10px;
         }
+        .navbar {
+            padding: 10px 10px;
+        }
+
         .navbar-brand img {
             margin-right: 10px;
         }
         .navbar-nav .nav-item .nav-link {
-            color: #333;
+            color: #007bff;
             font-weight: 600;
         }
         .navbar-nav .nav-item .nav-link:hover {
-            color: #666;
+            color: #0056b3;
+        }
+
+        .chat-message {
+            padding: 10px;
+            border-radius: 10px;
+            margin-bottom: 10px;
+            max-width: 75%;
+        }
+
+        .chat-message p {
+            margin: 0;
+        }
+
+        .chat-message img {
+            max-width: 250px;
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+            margin-top: 5px;
+        }
+
+        .chat-message.user {
+            background-color: #d1ecf1;
+            align-self: flex-end;
+        }
+
+        .chat-message.other {
+            background-color: #f8d7da;
+            align-self: flex-start;
         }
     </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="#">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="{% url 'chat' %}">
         <img src="{% static 'imran.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
         No Internet Zone
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'chat' %}">No Internet Zone</a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
             </li>
@@ -70,50 +104,45 @@
 </nav>
 
 <div class="container">
-    <h1 class="text-center">No Internet Zone</h1>
-    <h6 class="text-center mt-3">Hi {{ request.user | capfirst}}, <a style="font-size: medium" href="{% url 'account_logout' %}">Tap here to Logout</a></h6>
-    <br><br>
-    <p style="font-size: small; text-align: center">Updates:</p>
-    <marquee style="font-size: small">Chat time has been added. Multiple same chat and empty message is now ignored. Now refresh time increase to 25 second. Design has some minor fix. Now user can able to send images.</marquee>
+
+    <p class="text-center text-muted">Updates:</p>
+    <marquee class="text-center text-muted" style="font-size: small;">Chat time has been added. Multiple same chat and
+        empty message is now ignored. Now refresh time increase to 25 seconds. Design has some minor fix. Now users can
+        send images.
+    </marquee>
     <br>
-    <form id="chat-form" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="pt-4 pb-4">
-            <input type="text" class="form-control" name="message" id="message" placeholder="Your message" required/>
-        </div>
-        <div class="">
-            <input type="file" class="form-control" name="files" id="files" accept="image/*" placeholder="Image"/>
-        </div>
-        <div class="pt-4 pb-4">
-            <button class="btn btn-primary" type="submit">Send Message</button>
-        </div>
-    </form>
-    <div class="card mb-auto">
+
+    <div class="card">
         <div class="card-body" id="chat-area">
-            <div class="row">
-                <div class="col-md-12">
-                    {% for item in response_text %}
-                        <p style="text-align: end"><i style="text-align: end; font-size: small">[{{ item.created }}]</i></p>
-                        <p style="text-align: start">
-                            <strong style="text-align: start">{{ item.name.capitalize }}: </strong>{{ item.message }}
-                            {% if item.image %}
-                                <img class="card align-items-center" style="height: 200px; width: 200px" src="{{ item.image }}">
-                            {% endif %}
-                        </p>
-                    {% endfor %}
+            {% for item in response_text %}
+                <div class="chat-message {% if item.name == request.user.username %}user{% else %}other{% endif %}">
+                    <p><strong>{{ item.name|capfirst }}:</strong> {{ item.message }}</p>
+                    {% if item.image %}
+                        <img src="{{ item.image }}" alt="Image">
+                    {% endif %}
+                    <small class="text-muted"
+                           style="display: block; text-align: right;">{{ item.created|date:"d M Y, h:i A" }}</small>
                 </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
+    <form id="chat-form" style="margin-top:25px" enctype="multipart/form-data" class="mb-4">
+        {% csrf_token %}
+        <div class="input-group mb-3">
+            <input autofocus type="text" class="form-control" name="message" id="message" placeholder="Your message">
+            <input type="file" class="form-control" name="files" id="files" accept="image/*" style="max-width: 20%;">
+            <button class="btn btn-primary" type="submit">Send</button>
+        </div>
+    </form>
 </div>
-<footer class="footer mt-auto py-3">
+<footer class="footer mt-auto py-3 bg-light">
     <div class="container">
         <span class="text-muted">©2024 <a href="https://emon.com.bd"> Imran Nazir Emon</a>. All rights reserved. This project is made with Love.</span>
     </div>
 </footer>
 
 <script>
-    document.getElementById('chat-form').addEventListener('submit', function(event) {
+    document.getElementById('chat-form').addEventListener('submit', function (event) {
         event.preventDefault();
         let formData = new FormData(this);
 
@@ -121,11 +150,14 @@
             method: 'POST',
             body: formData,
         })
-        .then(response => response.json())
-        .then(data => {
-            fetchChatMessages(); // Refresh the chat area after sending a message
-        })
-        .catch(error => console.error('Error:', error));
+            .then(response => response.json())
+            .then(data => {
+                if (data.status === 'success') {
+                    document.getElementById('chat-form').reset(); // Clear the input fields
+                    fetchChatMessages(); // Refresh the chat area after sending a message
+                }
+            })
+            .catch(error => console.error('Error:', error));
     });
 
     function fetchChatMessages() {
@@ -136,14 +168,27 @@
                 chatArea.innerHTML = '';
                 data.forEach(item => {
                     let messageElement = document.createElement('div');
+                    messageElement.classList.add('chat-message');
+                    if (item.name === '{{ request.user.username }}') {
+                        messageElement.classList.add('user');
+                    } else {
+                        messageElement.classList.add('other');
+                    }
                     messageElement.innerHTML = `
-                        <p style="text-align: end"><i style="text-align: end; font-size: small">[${item.created}]</i></p>
-                        <p style="text-align: start">
-                            <strong style="text-align: start">${item.name}: </strong>${item.message}
-                            ${item.image ? `<img class="card align-items-center" style="height: 200px; width: 200px" src="${item.image}">` : ''}
-                        </p>`;
+                        <p><strong>${item.name}:</strong> ${item.message}</p>
+                        ${item.image ? `<img src="${item.image}" alt="Image">` : ''}
+                        <small class="text-muted" style="display: block; text-align: right;">${new Date(item.created).toLocaleString('en-BD', {
+                        day: '2-digit',
+                        month: 'short',
+                        year: 'numeric',
+                        hour: '2-digit',
+                        minute: '2-digit',
+                        hour12: true
+                    })}</small>
+                    `;
                     chatArea.appendChild(messageElement);
                 });
+                chatArea.scrollTop = chatArea.scrollHeight; // Scroll to the bottom
             });
     }
 
